<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:validate="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="@string/key_openapsaismb_settings"
        android:title="@string/openapsaismb"
        app:initialExpandedChildrenCount="0">

        <info.nightscout.core.validators.ValidatingEditTextPreference
            android:defaultValue="5"
            android:dialogMessage="@string/openapssmb_max_iob_summary"
            android:inputType="numberDecimal"
            android:key="@string/key_openapssmb_max_iob"
            android:title="@string/openapssmb_max_iob_title"
            validate:floatmaxNumber="15.0"
            validate:floatminNumber="1"
            validate:testType="floatNumericRange" />

        <info.nightscout.core.validators.ValidatingEditTextPreference
            android:defaultValue="2"
            android:dialogMessage="@string/openapssmb_maxsmb_summary"
            android:inputType="numberDecimal"
            android:key="@string/key_openapssmb_max_smb"
            android:title="@string/openapssmb_maxsmb_title"
            validate:floatmaxNumber="15.0"
            validate:floatminNumber="0.05"
            validate:testType="floatNumericRange" />

    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
